这个坑填不上了

--- a/Vim/什么是VimEverywhere/稿子.md
+++ b/Vim/什么是VimEverywhere/稿子.md
@@ -1,6 +1,6 @@
 # 学 Vim 的意义
 
-标题看上去很大，其实 “学 Vim 的意义” 也是我这一个系列 “VimEverywhere” 的出发点，也是实现全键盘、甚至只用键盘核心区的根本目标，那就是加快速度与流畅度，减少阻碍。
+标题看上去很大，其实 “学 Vim 的意义” 也是我这一个系列 “VimEverywhere” 的出发点，也是实现全键盘、甚至只用键盘核心区的根本目标，那就是加快速度与流畅度，减少阻碍(以及真的很酷)。
 
 VimEverywhere 还有一层含义，是一套操作到处用。可以理解为 Vim 是一套协议，它规定了 快捷键与功能 的对应关系，所有实现了 Vim 这套协议的编辑工具，都采用这一套 快捷键 设置。
 
@@ -8,6 +8,6 @@ VimEverywhere 还有一层含义，是一套操作到处用。可以理解为 Vi
 
 ...TODO
 
-很多时候，一个小小的负担，就可能导致在做与不做之间选择后者。举一个例子，我在记笔记视频里面分享的，如果你需要在记笔记、记录想法之前先给你此刻的想法归类，放进某个精心组织的文件夹，甚至文件夹的文件夹，更别说有时候有些笔记可能会让你觉得放哪一个文件夹都不完美，因为它同时关联着两个主题，你会放弃非常多记笔记的念头。而如果，记笔记只是简单的，打开笔记本，翻开新的一页，开始记录，完。那么很多零碎的小灵感，你都可能会愿意纪录下来。如果对应的电脑操作是 打开笔记本（切换到Joplin的快捷键 <Hyper+j>），开始纪录(新建笔记快捷键 <Cmd+n>)，开始记录（开始键入内容），你的笔记就会在任何时候触发。在写代码的时候，发现一个问题，由于搬砖时间有限，狗了一下，采用了比较笨的但是熟悉的实现办法，但是意识到会有更好的办法，OK，刚才一套操作，就建立了一个笔记；又或者突然想到一个待办事项，又是同样一套操作，加入今日日程的笔记中。全程无缝切换，没有任何让你觉得麻烦的事情，自然而轻松并迅速地做完了一系列的事情。
+很多时候，一个小小的负担，就可能导致在做与不做之间选择后者。举一个例子，我在记笔记视频里面分享的，如果你需要在记笔记、记录想法之前先给你此刻的想法归类，放进某个精心组织的文件夹，甚至文件夹的文件夹，更别说有时候有些笔记可能会让你觉得放哪一个文件夹都不完美，因为它同时关联着两个主题，你会放弃非常多记笔记的念头。而如果，记笔记只是简单的，打开笔记本，翻开新的一页，开始记录，完。那么很多零碎的小灵感，你都可能会愿意纪录下来。如果对应的电脑操作是 打开笔记本（切换到Joplin的快捷键 <Hyper+j>），翻开新的一页(新建笔记快捷键 <Cmd+n>)，开始记录（开始键入内容），在任何时候的细小灵感或者知识碎片都能被纪录下来。再举一个具体的场景的例子：在写代码的时候，发现一个问题，由于搬砖时间有限，狗了一下，采用了比较笨的但是熟悉的实现办法，但是意识到会有更好的办法，OK，记录下此刻的想法，以及可能的改动；又或者突然想到一个待办事项，又是同样一套操作，加入今日日程的笔记中。全程无缝切换，没有任何让你觉得麻烦的事情，自然而轻松并迅速地做完了一系列的事情。
 
 Vim 能做什么呢？Vim 能够减少鼠标操作，减少其他操作带来的不流畅感觉，减少阻止你去进一步动手实现想法的阻碍。这样节约下来的时间，是心流状态的时间（心流听起来比较洋气，其实就是全神贯注），是高产并且记忆深刻的时间。我个人感觉，我能从建筑与土木工程转行到程序员，这一套操作帮我节约下来的时间是非常重要的一点。让我多写了超级多的 Demo，减少了那些让我觉得烦而不去对着教程真的敲出代码的阻碍。因为你知道，用鼠标频繁切换程序，新建文件，开始写代码，开始运行是很烦的，我用键盘，分分钟就一套操作出来了，开始跑了。
